...
                app:layout_constraintBottom_toBottomOf="@id/imgAvatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgAvatar"
                app:layout_constraintTop_toBottomOf="@id/tvWage" />

            <EditText
                android:id="@+id/etvHourlyWage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@string/_2_years_9_months"
                app:layout_constraintEnd_toStartOf="@id/btnCancel"
                app:layout_constraintStart_toStartOf="parent"
...
